#3858 #3820 #3823: fixed theming and z-index issue and added seachbar size description

--- a/R4/Files/Templates/Designs/R4/Assets/_src/scss/2-components/_type-ahead.scss
+++ b/R4/Files/Templates/Designs/R4/Assets/_src/scss/2-components/_type-ahead.scss
@@ -1,6 +1,4 @@
-// Search field styling
-
-.type-ahead-dropdown {
+.type-ahead-dropdown { // Search field styling
 	background-color: var(--r4-background-color, inherit);
 	color: var(--r4-foreground-color, inherit);
 
@@ -18,88 +16,68 @@
 			transition: all 0.2s ease-in-out;
 			visibility: visible !important;
 			color: var(--r4-foreground-color, inherit);
+			margin-right: 0.25rem;
 		}
 	}
 
 	&.show {
+		z-index: 0;
 
-		.suggest-form { // The form, wrapping the search field
-
-			@include media-breakpoint-up(lg) {
-
-				&::before { // The backdrop behind the search field
-					background-color: var(--r4-background-color);
-					border-radius: 0;
-					border-top-left-radius: var(--r4-search-dropdown-border-radius, #{$dropdown-border-radius});
-					border-top-right-radius: var(--r4-search-dropdown-border-radius, #{$dropdown-border-radius});
-					content: "";
-					display: block;
-					position: absolute;
-					top: -0.5rem;
-					right: -0.5rem;
-					bottom: -0.5rem;
-					left: -0.5rem;
-					z-index: -1;
-				}
-			}
-		}
-
-		.dropdown-menu {
-
-			@include media-breakpoint-up(lg) {
-
-				&::before { // The Dropdown background
-					background-color: var(--r4-background-color);
-					border-radius: var(--r4-search-dropdown-border-radius, #{$dropdown-border-radius});
-					content: "";
-					display: block;
-					position: absolute;
-					top: -54px;
-					right: -0.5rem;
-					bottom: -0.5rem;
-					left: -0.5rem;
-					z-index: -1;
-				}
-
-				&::after {
-					background-color: $modal-backdrop-bg;
-					content: "";
-					cursor: pointer;
-					display: block;
-					opacity: $modal-backdrop-opacity;
-					position: fixed;
-					top: 0;
-					right: 0;
-					bottom: 0;
-					left: 0;
-					z-index: -2;
-				}
-			}
+		&::after { // The backdrop behind the search field
+			background-color: $modal-backdrop-bg;
+			content: "";
+			cursor: pointer;
+			display: block;
+			opacity: $modal-backdrop-opacity;
+			position: fixed;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			z-index: -2;
 		}
 	}
-}
 
-mark {
-	background-color: initial;
-	color: currentColor;
-	font-weight: 700;
-	padding: initial;
-}
+	mark {
+		background-color: initial;
+		color: currentColor;
+		font-weight: 700;
+		padding: initial;
+	}
 
-//Search result styling
-
-.type-ahead-menu {
-	background-color: var(--r4-background-color, inherit);
-	color: var(--r4-foreground-color, inherit);
-
-	.dropdown-item {
+	.type-ahead-menu { //Search result styling
 		background-color: var(--r4-background-color, inherit);
 		color: var(--r4-foreground-color, inherit);
 
-		&:hover,
-		&:focus {
-			color: var(--r4-background-color, inherit);
-			background-color: var(--r4-foreground-color, inherit);
+		.dropdown-item {
+			background-color: var(--r4-background-color, inherit);
+			color: var(--r4-foreground-color, inherit);
+
+			&:hover,
+			&.active {
+				color: var(--r4-background-color, #{$dropdown-link-hover-color} );
+				background-color: var(--r4-foreground-color, #{$dropdown-link-hover-bg});
+			}
+		}
+
+		&.show {
+			transform: translate(0%, -3rem) !important;
+			z-index: -1;
+			padding-top: 3.5rem;
+			padding-bottom: 0;
+
+			&::before { // The Dropdown background
+				background-color: var(--r4-background-color);
+				border-radius: $dropdown-border-radius;
+				content: "";
+				display: block;
+				position: absolute;
+				top: -1rem;
+				right: -1rem;
+				bottom: -1rem;
+				left: -1rem;
+				z-index: -1;
+			}
 		}
 	}
 }
